[package]
name = "drawlings"
version = "0.1.0"
authors = ["becker <github@deathbyescalator.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# https://www.pixtastock.com/illustration/69243821
[dependencies]
env_logger = "0.7"
log = "0.4"
plotters = "*"
clap = "3.0.0-beta.2"
image = "*"

